deploy/kind/poc06/remote/echo-smolagents.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-smolagents
  labels:
    app.kubernetes.io/name: echo-smolagents
spec:
  selector:
    app.kubernetes.io/name: echo-smolagents
  ports:
    - name: a2a
      port: 9000
      targetPort: 9000
